examples/istio-k8s/k8s/egress-router2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egress-router2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: egress-router2
  template:
    metadata:
      labels:
        app: egress-router2
        istio-injection: disabled
    spec:
      containers:
        - name: egress-router2
          image: egress-router:latest # Replace with your image repo if pushing to a registry
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: https-proxy
            - containerPort: 8081
              name: http-proxy
---
apiVersion: v1
kind: Service
metadata:
  name: egress-router2
spec:
  selector:
    app: egress-router2
  ports:
    - name: https-proxy
      port: 8080
      targetPort: 8080
    - name: http-proxy
      port: 8081
      targetPort: 8081
