examples/istio-k8s/k8s/egress1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egress1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: egress1
  template:
    metadata:
      labels:
        app: egress1
        istio-injection: disabled
    spec:
      containers:
        - name: egress1
          image: go-server:latest # Replace with your image repo if pushing to a registry
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
            - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: egress1
spec:
  selector:
    app: egress1
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
